SFPracticeApp/main/default/objects/Resources__c/Resources__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <label>EMP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>