SFPracticeApp/main/default/objects/Resources__c/fields/Certification_Count__c.field-meta.xml
<CustomField>
    <fullName>Certification_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Certification Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>