SFPracticeApp/main/default/objects/Resources__c/fields/Cost_center_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_center_Type__c</fullName>
    <label>Cost center Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>