SFPracticeApp/main/default/objects/Resources__c/fields/Date_of_Join__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Join__c</fullName>
    <label>Date of Join</label>
    <type>Date</type>
</CustomField>