SFPracticeApp/main/default/objects/Resources__c/fields/Demand_Mapping_Autopopulated__c.field-meta.xml
<CustomField>
    <fullName>Demand_Mapping_Autopopulated__c</fullName>
    <label>Demand Mapping Autopopulated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>