SFPracticeApp/main/default/objects/Resources__c/fields/Designation_Department__c.field-meta.xml
<CustomField>
    <fullName>Designation_Department__c</fullName>
    <label>Designation Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>