SFPracticeApp/main/default/objects/Resources__c/fields/Emp_Code__c.field-meta.xml
<CustomField>
    <fullName>Emp_Code__c</fullName>
    <label>Emp Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>