SFPracticeApp/main/default/objects/Resources__c/fields/Emp_Country__c.field-meta.xml
<CustomField>
    <fullName>Emp_Country__c</fullName>
    <label>Emp Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>