SFPracticeApp/main/default/objects/Resources__c/fields/Employee_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email_Id__c</fullName>
    <label>Employee Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>