SFPracticeApp/main/default/objects/Resources__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>