SFPracticeApp/main/default/objects/Resources__c/fields/Function_Tag_pick_list__c.field-meta.xml
<CustomField>
    <fullName>Function_Tag_pick_list__c</fullName>
    <label>Function Tag (pick list)*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>