SFPracticeApp/main/default/objects/Resources__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <label>Geo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>