SFPracticeApp/main/default/objects/Resources__c/fields/Home_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Home_Cost_Center__c</fullName>
    <label>Home Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>