SFPracticeApp/main/default/objects/Resources__c/fields/Home_Cost_Center_Desc__c.field-meta.xml
<CustomField>
    <fullName>Home_Cost_Center_Desc__c</fullName>
    <label>Home Cost Center Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>