SFPracticeApp/main/default/objects/Resources__c/fields/Home_Practice__c.field-meta.xml
<CustomField>
    <fullName>Home_Practice__c</fullName>
    <label>Home_Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>