SFPracticeApp/main/default/objects/Resources__c/fields/Manager_Link__c.field-meta.xml
<CustomField>
    <fullName>Manager_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Employee to the Supervisor.</description>
    <label>Manager Link</label>
    <referenceTo>Resources__c</referenceTo>
    <relationshipLabel>Team</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>