SFPracticeApp/main/default/objects/Resources__c/fields/ODCAutopopulate__c.field-meta.xml
<CustomField>
    <fullName>ODCAutopopulate__c</fullName>
    <label>ODCAutopopulate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>