SFPracticeApp/main/default/objects/Resources__c/fields/Old_Practice_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Old_Practice_Picklist__c</fullName>
    <label>Old Practice* (Picklist)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>