SFPracticeApp/main/default/objects/Resources__c/fields/Practice_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Practice_Picklist__c</fullName>
    <label>Practice* (Picklist)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>