SFPracticeApp/main/default/objects/Resources__c/fields/Primary_Skills_picklist__c.field-meta.xml
<CustomField>
    <fullName>Primary_Skills_picklist__c</fullName>
    <label>Primary Skills* (picklist)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>