SFPracticeApp/main/default/objects/Resources__c/fields/Primary_Supervisor_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Supervisor_Id__c</fullName>
    <label>Primary Supervisor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>