SFPracticeApp/main/default/objects/Resources__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>