SFPracticeApp/main/default/objects/Resources__c/fields/Revised_Band__c.field-meta.xml
<CustomField>
    <fullName>Revised_Band__c</fullName>
    <label>Revised Band</label>
    <length>255</length>
    <type>Text</type>
</CustomField>