SFPracticeApp/main/default/objects/Resources__c/fields/Role_GroupAutopopulated__c.field-meta.xml
<CustomField>
    <fullName>Role_GroupAutopopulated__c</fullName>
    <label>Role GroupAutopopulated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>