SFPracticeApp/main/default/objects/Resources__c/fields/Role_picklist__c.field-meta.xml
<CustomField>
    <fullName>Role_picklist__c</fullName>
    <label>Role* (picklist)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>