SFPracticeApp/main/default/objects/Resources__c/fields/Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Skill_Type__c</fullName>
    <label>Skill Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>