SFPracticeApp/main/default/objects/Resources__c/fields/Sub_Practice_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Sub_Practice_Picklist__c</fullName>
    <label>Sub-Practice* (Picklist)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>