SFPracticeApp/main/default/objects/Resources__c/fields/Webassessor_Email__c.field-meta.xml
<CustomField>
    <fullName>Webassessor_Email__c</fullName>
    <label>Webassessor Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>