SFPracticeApp/main/default/objects/Resources__c/fields/Wipro_Experience__c.field-meta.xml
<CustomField>
    <fullName>Wipro_Experience__c</fullName>
    <label>Wipro Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>