SFPracticeApp/main/default/objects/Resources__c/fields/X2nd_Level_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Level_Supervisor__c</fullName>
    <label>2nd Level Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>