SFPracticeApp/main/default/objects/Resources__c/fields/X2nd_Level_SupervisorID__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Level_SupervisorID__c</fullName>
    <label>2nd Level SupervisorID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>