SFPracticeApp/main/default/objects/Resources__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Emp_Code__c</columns>
    <columns>Primary_Supervisor_Name__c</columns>
    <columns>Emp_Country__c</columns>
    <columns>Revised_Band__c</columns>
    <columns>Role_picklist__c</columns>
    <columns>Practice_Picklist__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_of_Join__c</field>
        <operation>greaterThan</operation>
        <value>5/30/2022</value>
    </filters>
    <label>All Active Resources</label>
</ListView>